# Blinder

./: .gitignore  .gitmodules  makefile  readme.md
client/: Makefile  deploy.sh  gen_assets.sh  index.html  package-lock.json  package.json  tailwind.config.js  todo  tsconfig copy.json  tsconfig.json  vite.config.ts
client/public/: manifest.json  sw.js  test.html  tfhe_bg.wasm
client/remotes/: prod
client/remotes/tools/: deploy.sh
client/src/: App.svelte  __old_app_bkp.svelte  avatar.ts  bubble_data.ts  constants.ts  global.d.ts  main.ts  styles.css  types.ts
client/src/components/: AttachmentPicker.svelte  Avatar.svelte  AvatarEditor.svelte  BackButton.svelte  BlinderLogo.svelte  Bubble.svelte  BubbleDisplay.svelte  BubbleSelector.svelte  BubbleTags.svelte  ChatViewToggle.svelte  InAppNotifications.svelte  NewMessageDialog.svelte  Onboarding.svelte  PhoneInput.svelte  (+6 more)
db/: .env.demo  .gitignore  Makefile  docker-compose.yml  reset.sh
db/create/: users.sql
db/create-src/: 0_users.sql  1_otp_codes.sql  3_webauthn_credentials.sql  4_messaging_public_keys.sql  5_messages.sql  6_ephemeral_keys.sql  7_device_session_keys.sql  8_message_deliveries.sql  webauthn_challenges.sql
docs/: business_plan.md  message_security.md  messaging_schema.md  prompt-prefix.md  security.md  todo-details  todo.md
he-evaluator/: Cargo.toml
he-evaluator/src/: main.rs
server/: Cargo.toml  notes.md  run.sh
server/src/: main.rs
server/src/handlers/: calls.rs  common.rs  devices.rs  matches.rs  messages.rs  mod.rs  onboarding.rs  register.rs  users.rs  webauthn.rs  websocket.rs
(+46 files in other folders)
