[package]
name = "axum_sqlx_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
futures-util = "0.3"
tokio-tungstenite = "0.24"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
base64 = { version = "0.22", features = ["alloc"] }
# web-push = "0.10"  # TODO: Add when implementing full WebPush